feat(alignment): add comprehensive alignment bypass testing framework with steering vectors
Add research framework for testing safety alignment mechanisms in GPT-OSS models.
Supports comparing safe mode (Harmony formatting) vs unsafe mode (raw completion)
to determine if alignment is weight-based or prompt-based.

New capabilities:
- Three testing modes: SAFE (Harmony), UNSAFE (raw), STEERED (vector-based)
- Steering vector computation and application for activation patching
- 14 test prompts across safety, copyright, and benign categories
- Statistical analysis with bypass rate metrics
- Multi-model comparison support
- JSON/CSV export and visualization tools

Components:
- AlignmentTester: Core comparison framework with steering support
- ResultsAnalyzer: Statistical analysis and export
- Steering pipeline: vector computation, activation capture, layer patching
- Test prompt collections with expected behavior metadata
- Integration with existing ModelLoader and InferenceEngine

Files added:
- scripts/alignment/*.py (9 modules)
- scripts/alignment/activations/*.npz (steering vectors + paired activations)
- scripts/alignment/README.md (comprehensive usage guide)
- scripts/alignment/alignment_bypass.md (research documentation)

Updates:
- .gitignore: Exclude alignment test results (JSON/CSV)
- src/inference/engine.py: Support for steering vector integration
- src/models/registry.py: Extended model compatibility

Research ethics:
- Tool designed for understanding alignment mechanisms, not exploitation
- Findings should improve alignment techniques and benefit safety overall
- Responsible disclosure encouraged for any vulnerabilities discovered

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ Thumbs.db
 CLAUDE.local.md
 CLAUDE.local.md
 claude.local.md
+
+# Alignment test results
+scripts/alignment/results/*.json
+scripts/alignment/results/*.csv
